Don't use url_for because of scary warnings when uvicorn is http

--- a/discord_twitter_webhooks/templates/add/translate.html
+++ b/discord_twitter_webhooks/templates/add/translate.html
@@ -12,7 +12,7 @@
                {% if settings.translate %}checked{% endif %} />
         <div id="translate_help" class="form-text">
             Whether or not you want to translate the message. Note that you need
-            to add a DeepL API key in the <a class="text-muted" href='{{ url_for("settings") }}'>settings</a> for this
+            to add a DeepL API key in the <a class="text-muted" href="/settings">settings</a> for this
             to work.
         </div>
     </div>
