--- a/discord_twitter_webhooks/templates/nav.html
+++ b/discord_twitter_webhooks/templates/nav.html
@@ -7,17 +7,17 @@
             <ul class="navbar-nav">
                 {# Feeds #}
                 <li class="nav-item">
-                    <a class="nav-link" href='{{ url_for("index") }}'>Feeds</a>
+                    <a class="nav-link" href="/">Feeds</a>
                 </li>
                 <li class="nav-item nav-link d-none d-md-block">|</li>
                 {# Add #}
                 <li class="nav-item">
-                    <a class="nav-link" href='{{ url_for("add") }}'>Add</a>
+                    <a class="nav-link" href="/add">Add</a>
                 </li>
                 <li class="nav-item nav-link d-none d-md-block">|</li>
                 {# Settings #}
                 <li class="nav-item">
-                    <a class="nav-link" href='{{ url_for("settings") }}'>Settings</a>
+                    <a class="nav-link" href="/settings">Settings</a>
                 </li>
             </ul>
             {# Donate button #}
