--- a/discord_twitter_webhooks/templates/settings.html
+++ b/discord_twitter_webhooks/templates/settings.html
@@ -7,7 +7,7 @@
     </h1>
 {% endblock header %}
 {% block content %}
-    <form name="add" action='{{ url_for("settings_post") }}' method="post">
+    <form name="add" action="/settings" method="post">
         <div class="p-2 border border-dark">
             <h3>Feed Details</h3>
             {# Nitter instance #}
